--- a/webapp/view/Header.fragment.xml
+++ b/webapp/view/Header.fragment.xml
@@ -6,7 +6,7 @@
                 <HBox id="rightSideItems" width="20%" justifyContent="SpaceBetween">
                     <Button press="navigateToAbout" id="about" text="About" />
                     <Button press="navigateToProfile" id="profile" text="Profile" />
-                    <Button id="dropDownMenu" text="" icon="sap-icon://drop-down-list" />
+                    <Button id="dropDownMenu" text="" icon="sap-icon://drop-down-list" press="navToTable" />
                 </HBox>
             </HBox>
         </l:content>
