--- a/webapp/view/Table.view.xml
+++ b/webapp/view/Table.view.xml
@@ -2,9 +2,9 @@
     <Page id="table" title="{i18n>table}">
         <content>
             <Table id="idPersonsTable" items="{
-                path: '/persons',
+                path: 'personsModel>/persons',
                 sorter: {
-                    path: 'lastName'
+                    path: 'fullName'
                 } }">
                 <columns>
                     <Column id="__column0">
@@ -19,7 +19,7 @@
                     </Column>
                     <Column id="__column2">
                         <header>
-                            <Label text="Profil Info" id="__label2" />
+                            <Label text="Job" id="__label2" />
                         </header>
                     </Column>
                     <Column id="__column3">
@@ -41,61 +41,69 @@
                 <items>
                     <ColumnListItem id="__item0">
                         <cells>
-                            <!-- <Text text="{uuid}" id="__text3" />
-                            <Text text="{persons>fullName}" id="__text4" />
-                            <Text text="{persons>profileInfo}" id="__text5" />
-                            <Text text="{persons>address/streetAddress}" id="__text6" />
-                            <Text text="{persons>timezone}" id="__text7" />
-                            <Text text="{persons>zipCode}" id="__text8" /> -->
+                            <Text text="{personsModel>uuid}" id="__text3" />
+                            <Text text="{personsModel>fullName}" id="__text4" />
+                            <Text text="{personsModel>jobType}" id="__text5" />
+                            <Text text="{personsModel>address/streetAddress}" id="__text6" />
+                            <Text text="{personsModel>address/timezone}" id="__text7" />
+                            <Text text="{personsModel>address/zipCode}" id="__text8" />
                         </cells>
                     </ColumnListItem>
                 </items>
             </Table>
-            <!-- 
-            <t:Table id="table0" rows="{path: '/oscar', sorter: [{path: 'oscFemaleLead', descending: false}]}">
+
+            <!-- <t:Table id="personsTable2" rows="{path: '/persons', sorter: [{path: 'lastName', descending: false}]}">
                 <t:columns>
-                    <t:Column>
+                    <t:Column id="c0">
                         <t:label>
-                            <Label text="Jahr" />
+                            <Label text="ID" id="__label01" />
                         </t:label>
                         <t:template>
-                            <Text text="{oscYear}" />
+                            <Text text="{personsModel>uuid}" id="__text33" />
                         </t:template>
                     </t:Column>
-                    <t:Column>
+                    <t:Column id="c1">
                         <t:label>
-                            <Label text="Datum der Verleihung" />
+                            <Label text="Full Name" id="__label11" />
                         </t:label>
                         <t:template>
-                            <Text text="{oscDate}" />
+                            <Text text="{personsModel>fullName}" id="__text44" />
                         </t:template>
                     </t:Column>
-                    <t:Column>
+                    <t:Column id="c2">
                         <t:label>
-                            <Label text="Bester Regisseur" />
+                            <Label text="Profil Info" id="__label22" />
                         </t:label>
                         <t:template>
-                            <Text text="{oscBestDir}" />
+                            <Text text="{personsModel>profileInfo}" id="__text55" />
                         </t:template>
                     </t:Column>
-                    <t:Column>
+                    <t:Column id="c3">
                         <t:label>
-                            <Label text="Bester Darsteller" />
+                            <Label text="Adresse" id="__label33" />
                         </t:label>
                         <t:template>
-                            <Text text="{oscMaleLead}" />
+                            <Text text="{personsModel>address/streetAddress}" id="__text66" />
                         </t:template>
                     </t:Column>
-                    <t:Column>
+                    <t:Column id="c4">
                         <t:label>
-                            <Label text="Beste Darstellerin" />
+                            <Label text="Timezone" id="__label44" />
                         </t:label>
                         <t:template>
-                            <Text text="{oscFemaleLead}" />
+                            <Text text="{personsModel>address/timezone}" id="__text77" />
+                        </t:template>
+                    </t:Column>
+                    <t:Column id="c5">
+                        <t:label>
+                            <Label text="Zip Code" id="__label55" />
+                        </t:label>
+                        <t:template>
+                            <Text text="{personsModel>address/zipCode}" id="__text88" />
                         </t:template>
                     </t:Column>
                 </t:columns>
-            </t:Table>-->
+            </t:Table> -->
         </content>
     </Page>
 </mvc:View>
